# quart

./: package-lock.json  package.json
src/: app.css
src-tauri/: Cargo.toml  sd  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: Fractal.svelte
src/routes/: +page.svelte
static/composer/: index.html
